<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/myCoordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView android:id="@+id/text_add_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="@string/opt8" />

        <Space android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <View android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="#000000"/>

        <Space android:layout_width="match_parent"
            android:layout_height="10dp"/>


        <EditText android:id="@+id/edit_serial"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:hint="@string/edit_Brand" />

        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="sortBrand"
            android:text="@string/button_findBrand" />

        <ScrollView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:fillViewport="true">

            <TextView android:id="@+id/text_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/initial_message" />





        </ScrollView>

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/image_area"
            android:layout_gravity="center_horizontal"
            android:layout_width="200dp"
            android:layout_height="200dp" />


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>